<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/edit_text_style"
            android:ems="10"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:maxLength="35"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null" >
        </EditText>

        <com.ordrit.util.CalibriTextView
            android:id="@+id/textFirstNameError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/invalid_firstname"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone" />

       <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/edit_text_style"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/lastname"
            android:maxLength="35"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null" >
        </EditText>

        <com.ordrit.util.CalibriTextView
            android:id="@+id/textLastNameError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/invalid_lastname"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone" />
        
        
       <EditText
            android:id="@+id/editTextMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/edit_text_style"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/mobile_number"
            android:maxLength="35"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null" >
        </EditText>

        <com.ordrit.util.CalibriTextView
            android:id="@+id/textMobileNumberError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/invalid_phone_num"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone" />
        

        <EditText
            android:id="@+id/editTextUserEmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/edit_text_style"
            android:ems="10"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null" >
        </EditText>

        <com.ordrit.util.CalibriTextView
            android:id="@+id/textUserEmailIdError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/invalid_email"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone" />
    </LinearLayout>

    <com.ordrit.util.CalibriButton
        android:id="@+id/buttonUpdate"
        android:layout_height="wrap_content"
        android:layout_width="220dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/yellow_btn_style"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/update"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>