<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<LinearLayout
     android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" > >
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/deep_grey"
        android:orientation="vertical" >

        <com.ordrit.util.CalibriButton
            android:id="@+id/menuAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_button_selector"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/menu_text_padding_left"
            android:layout_marginTop="@dimen/menu_text_margin_top"
            android:text="@string/accounts"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_text_size" />

        <com.ordrit.util.CalibriButton
            android:id="@+id/menuBag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_button_selector"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/menu_text_padding_left"
            android:layout_marginTop="@dimen/menu_text_margin_top"
            android:text="@string/bag"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_text_size" />

        <com.ordrit.util.CalibriButton
            android:id="@+id/menuOrderStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_button_selector"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/menu_text_padding_left"
            android:layout_marginTop="@dimen/menu_text_margin_top"
            android:text="@string/order_status"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_text_size" />

        <com.ordrit.util.CalibriButton
            android:id="@+id/menuPreviousOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_button_selector"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/menu_text_padding_left"
            android:layout_marginTop="@dimen/menu_text_margin_top"
            android:text="@string/previous_orders"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_text_size" />

        <com.ordrit.util.CalibriButton
            android:id="@+id/menuCoupon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_button_selector"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/menu_text_padding_left"
            android:layout_marginTop="@dimen/menu_text_margin_top"
            android:text="@string/coupons"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_text_size" />

        <com.ordrit.util.CalibriButton
            android:id="@+id/menuHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_button_selector"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/menu_text_padding_left"
            android:layout_marginTop="@dimen/menu_text_margin_top"
            android:text="@string/help"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_text_size" />

        <com.ordrit.util.CalibriButton
            android:id="@+id/menuShoping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_button_selector"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/menu_text_padding_left"
            android:layout_marginTop="@dimen/menu_text_margin_top"
            android:text="@string/shopping_in"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>
</ScrollView>
