<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<LinearLayout
     android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" > >
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/deep_grey"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/my_accounts"
            android:textColor="@color/white"
            android:background="@drawable/drawer_button_selector"
            android:textSize="@dimen/drawer_text_size" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/my_bag"
            android:textColor="@color/white"
            
            android:background="@drawable/drawer_button_selector"
            android:textSize="@dimen/drawer_text_size" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/order_status"
            android:textColor="@color/white"
            android:background="@drawable/drawer_button_selector"
            android:textSize="@dimen/drawer_text_size" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/previous_orders"
            android:textColor="@color/white"
            android:background="@drawable/drawer_button_selector"
            android:textSize="@dimen/drawer_text_size" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/coupons"
            android:textColor="@color/white"
            android:background="@drawable/drawer_button_selector"
            android:textSize="@dimen/drawer_text_size" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/help"
            android:textColor="@color/white"
            android:background="@drawable/drawer_button_selector"
            android:textSize="@dimen/drawer_text_size" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/shopping_in"
            android:textColor="@color/white"
            android:background="@drawable/drawer_button_selector"
            android:textSize="@dimen/drawer_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>
</ScrollView>
