<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/rounded_container"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >

        <com.ordrit.util.CalibriTextView
            android:id="@+id/textLinkManageAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/my_account"
            android:textAppearance="?android:attr/textAppearanceLargeInverse"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold" />

        <com.ordrit.util.CalibriTextView
            android:id="@+id/textLinkManageAccountDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/manage_accounts"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/rounded_container"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >

        <com.ordrit.util.CalibriTextView
            android:id="@+id/textLinkManageAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/my_addresses"
            android:textAppearance="?android:attr/textAppearanceLargeInverse"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold" />

        <com.ordrit.util.CalibriTextView
            android:id="@+id/textLinkManageAddressesDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/manage_addresses"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

    <com.ordrit.util.CalibriButton
        android:id="@+id/buttonLogout"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/yellow_btn_style"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/log_out"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>