<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/rounded_edit_text"
        android:orientation="vertical"
        android:padding="10dp" >

        <com.ordrit.util.CalibriTextView
            android:id="@+id/textViewTextUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/dummy_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            >

            <com.ordrit.util.CalibriTextView
                android:id="@+id/textViewTextAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:maxWidth="250dp"
                android:padding="5dp"
                android:text="sdkhfsd sfjkshf sdkfjhsdf sdkfhsdfkh dsfhsdkfhs dsfkjhsdkfj sfkjhsfksdj sfsdkjf"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="20sp" />
        </ScrollView>

        <com.ordrit.util.CalibriTextView
            android:id="@+id/textChangeAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:padding="5dp"
            android:text="@string/change_address"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="50dp"
        android:minHeight="100dp"
        android:orientation="vertical"
        android:padding="10dp" >
    </LinearLayout>

    <com.ordrit.util.CalibriButton
        android:id="@+id/buttonNext"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="20dp"
        android:background="@drawable/yellow_btn_style"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>